2004-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/pipeline.cxx:
  - Removed disaster-handling code for exceptions in result constructor
2004-06-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx, src/result.cxx:
  - Changed garbage collection mechanism to double circular linked lists
  - Wrapping a PGresult * in a result object is now exception-free!
  - No more heap allocations when constructing
2004-06-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/transaction_base.hxx:
  - Wrap PQconsumeInput() and PQisBusy()
 include/pqxx/cursor.hxx:
  - Replaced _WIN32 conditionals with more appropriate _MSC_VER
 include/pqxx/pipeline.hxx, src/pipeline.cxx:
  - Excruciating 26-hour complete rewrite!
  - Much better exception safety
  - New pipeline stays registered throughout its lifetime, for now
  - No longer supports is_running()
  - retain() sets maximum number of queries to retain before trying to issue
 test/test071.cxx:
  - New retain() calls
  - No longer looks at is_running()
2004-06-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx:
  - Declared from_string() for char an ambiguous conversion (thanks Lee Sam)
2004-06-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
  - Added -funit-at-a-time for g++ 3.4
 doc/libpqxx.html:
  - Replaced Exec() with exec()
  - Replaced Perform() with perform()
  - Replaced Commit() with commit()
  - Replaced Quote() with sqlesc()
  - Replaced Cursor with icursorstream
  - Replaced ToString()/FromString() with resp. to_string()/from_string()
  - Removed FmtString()
  - Introduced sql_error
  - Expanded namespace explanation a little
 include/pqxx/connection_base.hxx, include/pqxx/tablewriter.hxx,
 include/pqxx/transaction_base.hxx, src/connection_base.cxx,
 src/tablewriter.cxx, src/transaction_base.cxx:
  - Removed async buffering code from tablewriter, thanks Rico Schiekel
 include/pqxx/cursor.hxx:
  - Documentation